<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/arial"
        android:text="@string/provider"
        android:textColor="@color/colorPrimary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ip_provider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/arial"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:text="HERTZ" />

    <TextView
        android:id="@+id/ip_radius"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:fontFamily="@font/arial"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="@+id/ip_address"
        app:layout_constraintEnd_toStartOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="@+id/textView"
        tools:text="25" />

    <TextView
        android:id="@+id/ip_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/arial"
        android:textColor="@color/colorAccent"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/ip_radius"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/ip_provider"
        app:layout_constraintTop_toBottomOf="@+id/ip_provider"
        tools:text="1234 National blvd, CA" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/arial"
        android:text="@string/miles"
        app:layout_constraintBottom_toBottomOf="@+id/ip_radius"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ip_radius" />


    <android.support.v7.widget.RecyclerView
        android:id="@+id/ip_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/s_border"
        android:elevation="-10dp"
        android:outlineProvider="bounds"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ip_address"
        tools:layout_height="50dp"
        tools:listitem="@layout/item_car"
        tools:visibility="visible" >

    </android.support.v7.widget.RecyclerView>


    <TextView
        android:id="@+id/ip_locate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:drawableTop="@drawable/v_locate"
        android:fontFamily="@font/arial"
        android:text="@string/Locate"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/ip_navigate"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/ip_recyclerview"
        app:layout_constraintTop_toBottomOf="@+id/ip_recyclerview" />

    <TextView
        android:id="@+id/ip_navigate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:drawableTop="@drawable/v_navigate"
        android:fontFamily="@font/arial"
        android:text="@string/navigate"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/ip_locate"
        app:layout_constraintEnd_toEndOf="@+id/ip_recyclerview"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/ip_locate"
        app:layout_constraintTop_toTopOf="@+id/ip_locate" />

    <View
        android:id="@+id/view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorAccent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ip_locate"
        app:layout_constraintVertical_bias="1.0" />




</android.support.constraint.ConstraintLayout>